<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChooseUserActivity"
    android:background="#D4AF37">

    <TextView
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="33dp"
        android:textStyle="bold"
        android:textColor="#800000"
        android:gravity="center"/>

    <TextView
        android:text="@string/pick_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:textColor="#800000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rider"
        android:id="@+id/ride"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:onClick="onClickRider"
        android:background="#323232"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:id="@+id/driver"
        android:layout_alignTop="@+id/ride"
        android:layout_alignEnd="@+id/welcome"
        android:onClick="onClickDriver"
        android:background="#323232"
        android:textColor="#ffffff" />

</RelativeLayout>
