<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.elon.saferides.DriverCallerInfoActivity">


    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/callerName_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/callerName_view"
            android:textColor="#000" />


    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/callerPhone_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/callerPhone_number_view"
            android:textColor="#000" />


    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/caller_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/caller_location"
            android:textColor="#000" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_button"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickAccept"
            android:id="@+id/accept_button" />

    </RelativeLayout>


</LinearLayout>





