<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.elon.edu.RiderInputActivity"
    android:background="#D4AF37"
    android:weightSum="1"
    >


    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/name_view"
            android:textColor="#800000" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000"
            android:singleLine="false"
            android:inputType="textCapWords|textPersonName" />

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/phone_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/phone_number_view"
            android:textColor="#800000" />

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:inputType="phone"
            android:maxLength="10" />

    </LinearLayout>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">




        <Space
            android:layout_width="16dp"
            android:layout_height="16dp"/>

    </RelativeLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"

        android:id="@+id/map"
        android:layout_weight="0.62"
        android:layout_height="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:onClick="onClickNext"
        android:id="@+id/next_button"
        android:textColor="#ffffff"
        android:background="#323232"
        android:layout_gravity="center_horizontal"
        android:height="30dp"
        android:width="100dp" />
</LinearLayout>
